--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "foxtok",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Metatrix88/foxtok",
+  "homepage": "https://Metatrix88.github.io/foxtok",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
