--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foxtok",
+  "name": "",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Metatrix88.github.io/foxtok",
@@ -12,6 +12,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
